CloudFormation/devops/EC2/ubuntu-example.yml
Description: Episode 4 example of user-data and cloud-init
Parameters:
  KeyPair:
    Description: Name of the keypair to use for SSH access
    Type: String
  Environment:
    Description: Name of this environment
    Type: String
    Default: Production
  Role:
    Description: The role this server should be
    Type: String
    Default: Web
Resources:
  MyElasticLoadBalancer:
    Properties:
      AvailabilityZones: !GetAZs ''
      HealthCheck:
        HealthyThreshold: 3
        Interval: 30
        Target: 'HTTP:80/'
        Timeout: 5
        UnhealthyThreshold: 5
      Listeners:
        - InstancePort: 80
          LoadBalancerPort: 80
          Protocol: HTTP
    Type: 'AWS::ElasticLoadBalancing::LoadBalancer'
  MySecurityGroup:
    Properties:
      GroupDescription: Allow access to MyInstance
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - FromPort: 80
          IpProtocol: tcp
          SourceSecurityGroupName: !GetAtt 
            - MyElasticLoadBalancer
            - SourceSecurityGroup.GroupName
          SourceSecurityGroupOwnerId: !GetAtt 
            - MyElasticLoadBalancer
            - SourceSecurityGroup.OwnerAlias
          ToPort: 80
    Type: 'AWS::EC2::SecurityGroup'
  MyASG:
    Properties:
      AvailabilityZones: !GetAZs ''
      Cooldown: 120
      LaunchConfigurationName: !Ref MyLaunchConfig
      LoadBalancerNames:
        - !Ref MyElasticLoadBalancer
      MaxSize: 1
      MinSize: 1
      Tags:
        - Key: Name
          PropagateAtLaunch: 'true'
          Value: Episode 4
    Type: 'AWS::AutoScaling::AutoScalingGroup'
  MyLaunchConfig:
    Properties:
      ImageId: ami-ef277b86
      InstanceType: t1.micro
      KeyName: !Ref KeyPair
      SecurityGroups:
        - !Ref MySecurityGroup
      UserData: !Base64 
        'Fn::Join':
          - |+

          - - '#!/bin/bash'
            - apt-get update
            - apt-get upgrade -y
            - apt-get install apache2 -y
            - echo "<html><body><h1>Welcome</h1>" > /var/www/index.html
            - !Join 
              - ''
              - - 'echo "<h2>Environment: '
                - !Ref Environment
                - </h2>" >> /var/www/index.html
            - !Join 
              - ''
              - - 'echo "<h2>Role: '
                - !Ref Role
                - </h2>" >> /var/www/index.html
            - echo "</body></html>" >> /var/www/index.html
    Type: 'AWS::AutoScaling::LaunchConfiguration'
Outputs:
  URL:
    Description: URL of the sample website
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt 
          - MyElasticLoadBalancer
          - DNSName
